<?xml version="1.0"?>
<package>
  <name>mopomdp_sar</name>
  <version>0.1.0</version>
  <description>Search and rescue test environment for MO-POMDP</description>

  <maintainer email="hend.altair@kustar.ac.ae">Hend Altair</maintainer>

  <license>LGPL v3.0</license>

  <url type="website">https://github.com/kuri-kustar/mopomdp_sar</url>
  <url type="bugtracker">https://github.com/kuri-kustar/mopomdp_sar</url>
  <url type="repository">https://github.com/kuri-kustar/mopomdp_sar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_gazebo</run_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
